[package]
name = "android_java_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
class_parser = { version = "0.1.0", path = "libs/class_parser" }
class_parser_tui = { version = "0.1.0", path = "libs/class_parser_tui" }
