[package]
name = "android_java_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { version = "*", path = "libs/base" }
clap = { version = "4.3.0", features = ["derive"] }
class_parser = { version = "0.1.0", path = "libs/class_parser" }
class_parser_tui = { version = "0.1.0", path = "libs/class_parser_tui" }
dex_parser = { version = "0.1.0", path = "libs/dex_parser" }
log = "0.4"
simplelog = { version = "0.12" }
