[package]
name = "class_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
thiserror = "1.0.37"
lazy_static = "1.4.0"
tui = "0.19"
crossterm = "0.26.1"
unicode-segmentation = "1.10"
unicode-truncate = "0.2"
unicode-width = "0.1"
log = "0.4"
simplelog = { version = "0.12", default-features = false }
