[package]
name = "dex_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { version = "0.1.0", path = "../base" }
nom = "7.1.3"
log = "0.4"
simplelog = { version = "0.12", default-features = false }
